--- a/themes/rhino3d.com-theme/assets/scss/_partial/_card.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_partial/_card.scss
@@ -1,86 +1,112 @@
 /* On mouse-over, add a deeper shadow */
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-
-  .gallery-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: flex-start;
-    padding: 2px 4px; 
-  }
-  
-  .gallery-container figure {
-    width: 200px;
-    height: 150px;
-    margin: 10px;
-    font-weight: 700;
-    font-size: $global-font-size;
-  }
-  
-
-  .card {
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
-    transition: 0.3s;
-    border-radius: $global-border-radius; /* 5px rounded corners */
-    border: 1px solid #dddddd;
-    margin: 1rem .35em;
-  }
-
-/* These max width media quesries control how many cards can show up on one row */
-@media screen and (min-width: 40em) {
-  .card {
-     max-width: calc(45% -  1em);
-  }
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-@media screen and (min-width: 50em) {
-  .card {
-     max-width: calc(30% -  1em);
-  }
+.gallery-container {
+  display: grid;
+  grid-gap: 18px 15px;
+  grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+  width: 100%;
+  align-items: stretch;
 }
 
-@media screen and (min-width: 80em) {
-  .card {
-      max-width: calc(16% - 1em);
-  }
+.gallery-container figure {
+  width: 200px;
+  height: 150px;
+  margin: 10px;
+  font-weight: 700;
+  font-size: $global-font-size;
 }
+
+
+.card {
+  /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+  transition: 0.3s;
+  border-radius: $global-border-radius; /* 5px rounded corners */
+  border: .5px solid #dddddd;
+  width: 100%;
+}
+
+// /* These max width media quesries control how many cards can show up on one row */
+// @media screen and (min-width: 40em) {
+//   .card {
+//      max-width: calc(45% -  1em);
+//   }
+// }
+
+// @media screen and (min-width: 50em) {
+//   .card {
+//      max-width: calc(30% -  1em);
+//   }
+// }
+
+// @media screen and (min-width: 80em) {
+//   .card {
+//       max-width: calc(16% - 1em);
+//   }
+// }
 
 /* Add rounded corners to the top left and the top right corner of the image */
-  .card img {
-    border-radius: 10px 10px 0 0;
+.card img {
+  border-radius: 10px 10px 0 0;
+  max-width: 100%;
+}
+
+.card-container h1 {
+  font-size: 14px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.card-container h3 {
+  font-size: 14px;
+  font-weight: 700;
+  margin-top: 5px;
+}
+
+.card-container p {
+  font-size: 11px;
+  padding-left: 5px;
+}
+
+.card-container li {
+  font-size: 11px;
+  margin: 2px;
+}
+
+.card-gacontainer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-position: outside;
+  list-style-image: none;
+}
+
+.card-market {
+  transition: 0.3s;
+  border-radius: $global-border-radius; /* 5px rounded corners */
+  width: 100%;
+  margin-bottom: 10px;
+  img {
+    border-radius: $global-border-radius;
     max-width: 100%;
   }
-
-  .card-container h1 {
-    font-size: 14px;
-    font-weight: 700;
-    margin-top: 5px;
-    margin-left: 5px;
+  img:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
+}
 
-  .card-container h3 {
-    font-size: 14px;
-    font-weight: 700;
-    margin-top: 5px;
+.card-container-market {
+  width: 100%;
+  text-align: center;
+  .card-container-market:hover {
+    box-shadow: none;
   }
+}
 
-  .card-container p {
-    font-size: 11px;
-    padding-left: 5px;
-  }
-
-  .card-container li {
-    font-size: 11px;
-    margin: 2px;
-  }
-
-  .card-gacontainer ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    list-style-position: outside;
-    list-style-image: none;
-  }
+.card-title-market {
+  font-size: 18px;
+  font-weight: 700;
+}
