--- a/themes/rhino3d.com-theme/assets/scss/_page/_home.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_page/_home.scss
@@ -115,3 +115,556 @@
         justify-content: right;
     }
 }
+
+
+model-viewer {
+	width: 100vw;
+	height: 60vh;
+	background-color: $global-background-color;
+  }
+  
+  
+  .mv-progress-bar {
+	display: block;
+	width: 33%;
+	height: 10%;
+	max-height: 2%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate3d(-50%, -50%, 0);
+	border-radius: 25px;
+	box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.5), 0px 0px 5px 1px rgba(0, 0, 0, 0.6);
+	border: 1px solid rgba(255, 255, 255, 0.9);
+	background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .mv-progress-bar.hide {
+	visibility: hidden;
+	transition: visibility 0.3s;
+  }
+  
+  .mv-update-bar {
+	background-color: rgba(255, 255, 255, 0.9);
+	width: 0%;
+	height: 100%;
+	border-radius: 25px;
+	float: left;
+	transition: width 0.3s;
+  }
+
+/*
+##################################################################
+# Site Home - from RIR - experimental
+##################################################################
+*/
+
+.home-download-button {
+    width: 30%;
+    min-width: 300px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.50) inset, 0 -1px 0 rgba(255, 255, 255, 0.10) inset, 0 4px 0 #880000, 0 4px 2px rgba(0, 0, 0, 0.50);
+    user-select: none;
+    padding: 10px 15px 10px 15px;
+    display: block !important;
+    margin-right: auto;
+    margin-left: auto;
+    color: $button-text-color;
+    background: linear-gradient(180deg, $button-border-color 5%,$button-shadow-color 100%);
+    font-weight: 400;
+    text-align: center;
+    user-select: none; 
+    border: 1px solid transparent;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
+.home-download-button:hover {
+    background: linear-gradient(180deg, $button-shadow-color 5%, $button-border-color 100%);
+    color: $global-background-color;
+}
+
+.home-key-image {
+    //display: block;
+    // margin-left: auto;
+    // margin-right: auto;
+    //margin-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    padding-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    height: 55vh;
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        height: 50vh;
+    }
+}
+
+.home-headline-container {
+    //display: flex;
+    position: absolute;
+    margin: match-parent;
+    text-align: center;
+    top: $global-nav-height-large;
+    right: 0;
+    align-items: right;
+    justify-content: right;
+    box-sizing: border-box;
+    width: auto;
+
+    padding-right: 17em;
+    padding-top: 2em;
+    background-color: white;
+    box-shadow: 0 0 2.5em 2.5em white;
+    opacity: 85%;
+    border-bottom-left-radius: $global-border-radius;
+    
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        padding-right: 2em;
+    }
+}
+
+.home-headline {
+    font-size: 66px;
+    white-space: nowrap;
+    font-weight: bold;
+    color: $global-rhino-color;
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        font-size: 46px;
+    }
+}
+
+.home-headline-small {
+    font-size: 52px;
+    font-weight: bold;
+    color: $global-rhino-color;
+    white-space:nowrap;
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        font-size: 32px;
+    }
+}
+
+.home-subtitle {
+    font-size: 1.6em;
+    font-style: italic;
+    font-weight: bold;
+    white-space:nowrap;
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        font-size: 1.0em;
+    }
+}
+
+.home-short-description {
+    font-size: 1.4em;
+    max-width: 400px;
+    color: $global-dark-grey;
+    @media only screen and (max-width: $global-mobile-maxwidth) { 
+        font-size: 1.0em;
+    }
+}
+
+.home-link {
+    font-weight: bold;
+    font-size: 1.4em;
+    white-space:nowrap;
+}
+
+.home-new-in-rhino {
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    padding-right: calc((100vw - #{$global-desktop-maxwidth})/2);
+    -webkit-box-shadow: 0 0px 4px -1px rgba(0,0,0,0.5);
+       -moz-box-shadow: 0 0px 4px -1px rgba(0,0,0,0.5);
+            box-shadow: 0 0px 4px -1px rgba(0,0,0,0.5);
+
+    @media only screen and (max-width: $global-desktop-maxwidth) { 
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    h2 {
+        font-size: 55px;
+    }
+}
+
+.home-learn-rhino {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.home-market {
+    background-color: $global-light-grey;
+
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    padding-right: calc((100vw - #{$global-desktop-maxwidth})/2);
+
+    @media only screen and (max-width: $global-desktop-maxwidth) { 
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    h2 {
+        font-size: 55px;
+    }
+}
+
+.home-quote {
+    blockquote {
+        border-left: 3px solid $global-rhino-color;
+        padding-left: 10px;
+        color: black;
+        font-size: 20px;
+        font-style: italic;
+        display: block;
+        margin-block-start: 1.2em;
+        margin-block-end: 1em;
+        margin-inline-start: 20px;
+        margin-inline-end: 20px;
+
+      .name {
+        color: black;
+        margin-top: 10px;
+        font-size: 14px;
+        font-weight: bold;
+      }
+    }
+}
+
+.home-grasshopper {
+    background-size: cover;
+    background-image: url("https://www.rhino3d.com/new-source/images/home_feature_gh.png");
+    background-position: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    padding-right: calc((100vw - #{$global-desktop-maxwidth})/2);
+    font-size: 1.3em;
+    color: $global-light-color;
+    text-shadow: 2px 4px 8px black;
+
+    @media only screen and (max-width: $global-desktop-maxwidth) { 
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    h2 {
+        font-size: 55px;
+    }
+
+    img {
+        //margin-top: 15px;
+        border-radius: $global-border-radius;
+        border: .5px solid #dddddd;
+        @media only screen and (max-width: $global-desktop-maxwidth) { 
+            margin-top: 0px;
+            margin-bottom: 15px;
+        }
+    }
+}
+
+.home-ecosystem {
+    background-color: $global-light-grey;
+
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: calc((100vw - #{$global-desktop-maxwidth})/2);
+    padding-right: calc((100vw - #{$global-desktop-maxwidth})/2);
+
+    @media only screen and (max-width: $global-desktop-maxwidth) { 
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    h2 {
+        font-size: 55px;
+    }
+}
+
+.home-container-full {
+    max-width: unset;
+    margin: 0 auto;
+    padding-right: none;
+    padding-left: none;
+    padding-top: none;
+    background-color: $global-light-grey;
+}
+
+.home-cover {
+    position: relative;
+    height: 70vh;
+    min-height: 300px;
+}
+
+.home-gallery {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.home-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: opacity(0.8);
+}
+
+.home-gallery iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.home-contents-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: 36px;
+    display: flex;
+    align-items: flex-end;
+    box-sizing: border-box;
+    -webkit-box-align: center;
+}
+
+.home-contents-textmask {
+    width: 100%;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(232, 232, 232, 1) 90%);
+}
+
+.home-contents {
+    display: block;
+    max-width: $global-desktop-maxwidth;
+    padding: 0 30px 0 30px;
+    margin: 90px auto 30px auto;
+    color: white;
+}
+
+.home-contents h1 {
+    margin-top: 20px;
+    color: #111;
+}
+
+.home-contents h3 {
+    color: #111;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.home-dependencies {
+    margin: 30px auto 30px auto;
+    text-align: center;
+}
+
+.home-features {
+    background-color: $global-background-color;
+}
+
+.home-feature {
+    padding: 30px;
+    color: white;
+}
+
+.home-feature-rhino {
+    background-size: cover;
+    background-position: center;
+    background-color: $global-light-grey;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.home-feature-gh {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../../static/images/home/home_feature_gh.png);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.home-feature-ghcomps {
+    background-size: cover;
+    background-position: center;
+    color: #111;
+}
+
+.home-feature-bim360 {
+    background-size: cover;
+    background-position: center;
+    color: #111;
+}
+
+.home-feature-api {
+    background-size: cover;
+    background-position: center;
+    color: #111;
+}
+
+.home-feature-grid-item {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    color: #111;
+    background-color: white;
+    padding: 15px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.home-feature-grid-img-item {
+    padding: 0;
+    overflow: hidden;
+}
+
+.home-feature-grid-img-item img {
+    width: 100%;
+    height: 100%;
+}
+
+.home-feature-rhino-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    grid-auto-rows: minmax(100px, auto);
+    margin: 20px 0px;
+}
+
+.home-feature-gh-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    grid-auto-rows: minmax(100px, auto);
+    margin-top: 20px;
+}
+
+.home-feature-ghcomps-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.home-feature h2 {
+    font-size: 45px;
+}
+
+.home-feature h3 {
+    font-size: 36px;
+}
+
+.home-feature p {
+    font-size: 18px;
+}
+
+.home-feature a,
+.home-feature a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+.home-feature small {
+    font-size: 28px;
+    padding-left: 20px;
+}
+
+.home-feature-ghcomps-grid a,
+.home-feature-ghcomps-grid a:visited {
+    color: #111;
+}
+
+.home-feature-content {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    column-gap: 40px;
+}
+
+.home-feature-content-dark a,
+.home-feature-content-dark a:visited {
+    color: #111;
+    font-weight: bold;
+}
+
+.home-feature-content a:hover {
+    text-decoration: underline;
+}
+
+.home-feature-content-center-label {
+    text-align: center;
+    margin-top: 30px
+}
+
+.home-feature-content-center-label a,
+.home-feature-content-center-label a:visited {
+    color: #111;
+}
+
+.home-feature-content-center-label a:hover {
+    text-decoration: underline;
+}
+
+.home-discover {
+    margin-bottom: 30px;
+    box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.home-discover h2 {
+    text-align: center;
+    padding: 20px 0 20px 0;
+    font-size: 40px;
+}
+
+.home-discover a,
+.home-discover a:visited {
+    color: #111;
+}
+
+.rhino-grid-container {
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .2));
+    z-index:-100; overflow:hidden;
+}
+
+.rhino-grid {
+    background-image: 
+    linear-gradient(0deg, transparent 9%, 
+            #82868B 10%, #82868B 12%, transparent 13%, transparent 29%, 
+            #82868B 30%, #82868B 31%, transparent 32%, transparent 49%, 
+            #82868B 50%, #82868B 51%, transparent 52%, transparent 69%, 
+            #82868B 70%, #82868B 71%, transparent 72%, transparent 89%,
+            #82868B 90%, #82868B 91%, transparent 92%, transparent),
+    linear-gradient(90deg, transparent 9%, 
+            #82868B 10%, #82868B 12%, transparent 13%, transparent 29%, 
+            #82868B 30%, #82868B 31%, transparent 32%, transparent 49%, 
+            #82868B 50%, #82868B 51%, transparent 52%, transparent 69%, 
+            #82868B 70%, #82868B 71%, transparent 72%, transparent 89%,
+            #82868B 90%, #82868B 91%, transparent 92%, transparent);
+    background-size:40px 40px;
+    transform: perspective(300px) rotateX(0deg) scale(2);
+    overflow: hidden;
+    height: 100%;
+}
+
+.rhino-bg {
+    background-color: #e3e3e3;
+}
+
+.soft-shadow {
+    filter: drop-shadow(0px 0px 3px rgba(66,55,55, .2));
+}
+
+.white-soft-surface {
+    background:#ffffffc9; border-radius:2px;
+}
+
+::-moz-selection { /* Code for Firefox */
+    color: #82868B;
+    background: #F9F953;
+  }
+  
+  ::selection {
+    color: #82868B;
+    background: #F9F953;
+  }
