--- a/themes/rhino3d.com-theme/layouts/_default/single.html
+++ b/themes/rhino3d.com-theme/layouts/_default/single.html
@@ -1,10 +1,5 @@
 {{ define "main" }}
-<div class="single-content-area toc-page">
-  {{ if .Params.page_options.toc }}
-    {{ partial "toc.html" . }}
-  {{ end }}
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
-    {{/* partial "breadcrumbs.html" . */}}
+  {{ if (.Params.page_options.container_layout) }} <!--New container layouts-->
     {{ if ne false (.Params.page_options.show_title) }}
     <h1>{{ .Page.Title }}</h1>
     {{ end }}
@@ -13,8 +8,23 @@
     {{ if and (not .Params.page_options.plain ) (not .Params.page_options.hide_edit_button ) }}
       {{- partial "edit_button.html" . -}}
     {{ end }}
-    {{/*  {{- partial "platform-switch" . -}}  */}}    
-  </div>
-</div>
+  {{ else }} <!--Old layouts-->
+    <div class="single-content-area toc-page">
+      {{ if .Params.page_options.toc }}
+        {{ partial "toc.html" . }}
+      {{ end }}
+      <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+        {{/* partial "breadcrumbs.html" . */}}
+        {{ if ne false (.Params.page_options.show_title) }}
+        <h1>{{ .Page.Title }}</h1>
+        {{ end }}
+        <p>{{ partial "byline.html" . }}</p> 
+        {{ .Content }}
+        {{ if and (not .Params.page_options.plain ) (not .Params.page_options.hide_edit_button ) }}
+          {{- partial "edit_button.html" . -}}
+        {{ end }}
+        {{/*  {{- partial "platform-switch" . -}}  */}}    
+      </div>
+    </div>
+  {{ end }}
 {{ end }}
-
