Partial theme sync

--- a/themes/rhino3d.com-theme/assets/scss/_page/_home.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_page/_home.scss
@@ -656,7 +656,7 @@ model-viewer {
 }
 
 .white-soft-surface {
-    background:#ffffffc9; border-radius:2px;
+    background:#ffffff; border-radius:2px;
 }
 
 ::-moz-selection { /* Code for Firefox */
