--- a/themes/rhino3d.com-theme/layouts/shortcodes/scroll-video-sticky.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/scroll-video-sticky.html
@@ -19,6 +19,7 @@
       margin-top: 0;
       position: sticky;
       z-index: -1;
+      filter: drop-shadow(0px 0px 3px rgba(66,55,55, .9));
       ">
 
       <div class="scroll-video-container {{ $class }}" id="video-container-{{ $id }}" style="text-align: center;">
