--- a/themes/rhino3d.com-theme/assets/scss/_core/_navigation.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_core/_navigation.scss
@@ -19,7 +19,7 @@
     position:absolute;
     right: 10px;
     bottom: 18px;
-	padding-right: 4px;	
+	padding-right: 10px;	
 }
 
 .navigation a {
@@ -48,44 +48,30 @@
 
 // NEW NAVBAR
 #navbar {
-	z-index: 1000;
+	display: block;
+	overflow: hidden;
 	background-color: $global-background-color;
 	transition: 0.4s;
 	position: fixed;
 	width: 100%;
 	top: 0;
+	z-index: 1000;
 	box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
-	display:flex;
-	flex-direction: column;
-    align-items: flex-end;
-}
-
-@media screen and (max-width: $global-mobile-maxwidth) {
-	#navbar {
-		align-items: center;
-	}
-}
-
-#nav-logo-search-container {
-	display: block;
-	overflow: hidden;
 	display: flex;
-    justify-content: space-between;
-	width: 100%;
-	align-items: center;
-	max-width: calc(100% - 60px);
-	margin: auto;
+    align-items: center;
 }
 
-@media screen and (max-width: $global-mobile-maxwidth) {
-	#nav-logo-search-container {
-		max-width: calc(100% - 30px);
-	}
+#navbar #wrap {
+	margin-right: auto;
+    margin-left: auto;
+    padding: 0 8px;
+	width: calc(100% - 16px);
+	max-width: 1100px;
 }
 
 #navbar a {
 	color: $global-dark-grey;
-	padding-right: 5px;
+	padding-right: 15px;
 }
 
 #navbar a:hover {
@@ -94,21 +80,20 @@
 }
 
 #logo-container {
-	height: $global-nav-height-large;
+	height: 125px;
 	transition: 0.4s;
-    padding: 4px;
-	padding-left: 0px;
+    overflow: hidden;
 	position: relative;
 }
 
 #logo-inner-container {
+	position: absolute;
 	z-index: 100;
-	height: 100%;
 }
 
 #site-nav-logo {
 	transition: 0.4s;
-	height: 100%;
+	height: 125px;
 }
 
 #logo-title-text {
@@ -159,33 +144,20 @@
 }
 
 .menu-items {
-    margin-top: -43px;
-    padding-bottom: 15px;
-	width: 800px;
-    max-width: 75%;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-	margin-right: 30px;
+	position: absolute;
+	bottom: 18px;
+	padding-left: 180px;
 }
 
 @media screen and (max-width: $global-mobile-maxwidth) {
 	.menu-items { 
-		display: flex;
-		position: relative;
-		justify-items: center;
-		height: 0;
-		transition: .4s;
-		margin-top: 0;
-		padding-bottom: 0;
-		width: 100%;
-		flex-direction: column;
-		align-content: center;
-		justify-content: space-evenly;
-		align-items: center;
-		margin-right: 0px;    
-		flex-wrap: nowrap;
+		display: grid; 
+		position: relative; 
+		top: 5px; 
+		padding-left: 0px; 
+		justify-items: center; 
+		height: 0vh; 
+		transition: 0.4s; 
 	}
 	.menu-items a {
 		text-decoration: none;
@@ -205,15 +177,21 @@
 
 // Overlay menu for mobile navigation
 .overlayMenuIcon {
-	display: none;
 	visibility: hidden;
-	transition: 0.4s;
+	position: absolute;
+	right: 10px;
+	top: 40px;
 }
 
 @media screen and (max-width: $global-mobile-maxwidth) {
 	.overlayMenuIcon {
-		display: block;
 		visibility: visible;
+		right: 10px;
+		position: absolute;
+		top: 50%;
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		transition: 0.4s;
 	}
 }
 
