Fixed new-callout styling

--- a/themes/rhino3d.com-theme/assets/scss/_custom.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_custom.scss
@@ -337,6 +337,10 @@ li .new-callout-bullet {
 	color: $global-background-color;
 }
 
+.new-callout a:visited {
+	color: $global-background-color;
+}
+
 .platform-callout {
 	font-size: 30px; 
 	color: $global-platform-color;
