Use support email for cz issuer reg
Adds a big button with a precompiled email for registering an issuer via the general support email, instead of sending direct to AJ or I.

Fixes WWW-2330

--- a/static/scss/_overrides.scss
+++ b/static/scss/_overrides.scss
@@ -156,3 +156,15 @@ tbody.index_table tr td{
 	overflow: hidden;
 	transition: max-height 0.2s linear;
   }
+
+/*
+##############################################################################
+## Misc
+##############################################################################
+*/
+
+// the btn classes don't look right, so I'm tweaking them for my own use
+.btn-czreg {
+	font-size: large;
+	height: auto;
+}
