--- a/themes/rhino3d.com-theme/layouts/partials/byline.html
+++ b/themes/rhino3d.com-theme/layouts/partials/byline.html
@@ -11,7 +11,7 @@
             {{ $.Scratch.Set "singleAuthor" false }}
             {{ if eq ($.Scratch.Get "length") 1 }} {{ $.Scratch.Set "singleAuthor" true }} {{ end }}
             <a href="{{ $.Site.Params.discourseURL }}/u/{{ $author.discourse }}/">{{ $author.name }}</a>{{ if ne ($.Scratch.Get "singleAuthor") true }}{{ if eq ($.Scratch.Get "length") 2 }}{{ if lt ($.Scratch.Get "counter") ($.Scratch.Get "length") }} {{ i18n "and" }}{{ end }}{{ else }}{{ if eq ($.Scratch.Get "counter") $length_min_one }}, {{ i18n "and" }}{{ else }}{{ if lt ($.Scratch.Get "counter") ($.Scratch.Get "length") }}, {{ end}}{{ end }}{{ end }}{{ end }}                              
-        {{ end }} ({{ i18n "Last-updated" }}&nbsp;{{- partial "last-modified" . -}})
+        {{ end }} ({{ i18n "Last-updated" }}&nbsp;{{- partial "last-modified.html" . -}})
   </span>
   {{ end }}
 {{ end }}
