--- a/themes/rhino3d.com-theme/layouts/partials/last-modified.html
+++ b/themes/rhino3d.com-theme/layouts/partials/last-modified.html
@@ -5,6 +5,8 @@
 {{- $.Scratch.Set "day" (dateFormat "1" .Params.override_last_modified) -}}
 {{- $.Scratch.Set "month" (dateFormat "January" .Params.override_last_modified) -}}
 {{- $.Scratch.Set "year" (dateFormat "2006" .Params.override_last_modified) -}} <!-- "2006" is the magic dateFormat year number -->
+{{- $.Scratch.Set "month_trans" ($.Scratch.Get "month") -}}
+{{- $.Scratch.Set "weekday_trans" ($.Scratch.Get "weekday") -}}
 {{- else -}} <!-- but we default to the last time the file changed in git -->
 {{- $.Scratch.Set "weekday" (dateFormat "Monday" .Page.Lastmod) -}} 
 {{- $.Scratch.Set "day" .Page.Lastmod.Day -}}
@@ -12,12 +14,13 @@
 {{- $.Scratch.Set "year" .Page.Lastmod.Year -}}
 {{- end -}}
 
+{{- if or (eq ($.Scratch.Get "lang") "cn") (eq ($.Scratch.Get "lang") "jp") (eq ($.Scratch.Get "lang") "kr") (eq ($.Scratch.Get "lang") "tw") -}}
 {{- with index .Site.Data.months .Site.Language.Lang -}}
 {{- $.Scratch.Set "month_trans" (index .months ($.Scratch.Get "month" )) -}}
 {{- end -}}
-
 {{- with index .Site.Data.weekdays .Site.Language.Lang -}}
 {{- $.Scratch.Set "weekday_trans" (index .weekdays ($.Scratch.Get "weekday" )) -}}
+{{- end -}}
 {{- end -}}
 
 {{- if eq ($.Scratch.Get "lang") "cn" -}}
