Port fix for WWW-1221 to devdocs

--- a/themes/rhino3d.com-theme/layouts/_default/_markup/render-heading.html
+++ b/themes/rhino3d.com-theme/layouts/_default/_markup/render-heading.html
@@ -2,6 +2,8 @@
 {{ $enHeadings := slice }}
 {{ $translations := dict }}
 {{ $enOccurances := dict }}
+{{ $headingText := index (split .Text "%%") 0}}
+{{ $badge := index (split .Text "%%") 1}}
 {{ $find := `#+ ([^{\n]+)[ \n]`}}
 {{ $clean := `^[\s#]+|\s+$`}}
 
@@ -31,4 +33,4 @@
 
 {{/* overriding id and href of heading */}}
 {{ $generatedAnchor := index $translations $.Anchor }}
-<h{{ $.Level }} id="{{$generatedAnchor}}">{{ $.Text | safeHTML }}<a href="#{{$generatedAnchor}}"></a></h{{ $.Level }}>
+<h{{ $.Level }} id="{{$generatedAnchor}}">{{ $headingText | safeHTML }}<a aria-label="{{ $headingText | safeHTML }}" href="#{{$generatedAnchor}}"></a>{{ if $badge }}<div class="new-callout new-callout-inline"><a href="/8/new/">{{ $badge | safeHTML }}</a></div>{{ end }}</h{{ $.Level }}>
