--- a/themes/rhino3d.com-theme/layouts/my-account/single.html
+++ b/themes/rhino3d.com-theme/layouts/my-account/single.html
@@ -256,7 +256,7 @@
 </script>
   
 {{ $sass := resources.Get "/scss/_page/_maillist.scss" }}
-{{ $style := $sass | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+{{ $style := $sass | css.Sass | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
 
 {{ end }}
