--- a/themes/rhino3d.com-theme/layouts/shortcodes/subscribe.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/subscribe.html
@@ -169,5 +169,5 @@
 </script>
 
 {{ $sass := resources.Get "/scss/_page/_subscribe.scss" }}
-{{ $style := $sass | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+{{ $style := $sass | css.Sass | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
