--- a/themes/rhino3d.com-theme/layouts/shortcodes/include-markdown.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/include-markdown.html
@@ -1,4 +1,4 @@
-{{- $src := path.Join "/content" .Page.File.Lang .Page.File.Dir (.Get "src")}}
+{{- $src := path.Join .Page.File.Dir (.Get "src")}}
 {{with .Site.GetPage $src }}
 {{ .Content }}
 {{end}}
