--- a/themes/rhino3d.com-theme/layouts/shortcodes/appstore.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/appstore.html
@@ -14,6 +14,6 @@
     }
 </style>
 <a class="appstore-btn" href="{{ $link }}">
-    <img src="/images/appstore/{{.Page.Language}}.svg" />
+    <img src="/images/appstore/{{.Page.Language}}.svg" alt="iOS App Store"/>
 </a>
 
