--- a/themes/rhino3d.com-theme/layouts/stories/single.html
+++ b/themes/rhino3d.com-theme/layouts/stories/single.html
@@ -5,7 +5,11 @@
   {{ end }}
   <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
     {{/* partial "breadcrumbs.html" . */}}
-    <h1>{{ .Page.Title }}</h1>
+    {{ if ne false (.Params.page_options.show_title) }}
+    <div class="feature-title-container">
+      <div class="feature-title">{{ .Page.Title }}</div>{{ if eq (int .Site.Params.latestRhinoVersion) (int .Params.included_in.since) }}<div class="new-callout"><a href="/{{ .Site.Params.latestRhinoVersion}}/new">{{ i18n "NEW-in-Vx" . }}</a></div>{{ end }}{{- partial "platform-callout" . -}}        
+    </div>
+    {{ end }}
     <p>{{ partial "byline.html" . }}</p> 
     {{ .Content }}
     {{- partial "edit_button.html" . -}}
