--- a/themes/rhino3d.com-theme/assets/scss/_core/_base.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_core/_base.scss
@@ -7,8 +7,10 @@ html, body, button, input, select, textarea {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	overflow: vertical;
-	scroll-behavior: smooth;
+	// scroll-behavior: smooth; //breaks scrolling on load
 }
+
+
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
 	display: block;
 }
