Sync scripts with integrity hashes

--- a/themes/rhino3d.com-theme/layouts/partials/discourse-gallery-support.html
+++ b/themes/rhino3d.com-theme/layouts/partials/discourse-gallery-support.html
@@ -1,5 +1,5 @@
 <!-- Discourse Gallery Topic list Script start -->
 {{ if .Params.page_options.discourse_gallery }}
-<script src="https://discourse.mcneel.com/javascripts/embed-topics.js"></script>
+<script src="https://discourse.mcneel.com/javascripts/embed-topics.js" integrity="sha384-doR2WdM8R9YncSJCUjdNVuf6pueV4S6Wa2mfqUW8H2q9YPCiQhy45CEd9gngcWR3" crossorigin="anonymous"></script>
 {{ end }}
 <!-- Discourse Gallery Topic list end -->
