--- a/themes/rhino3d.com-theme/layouts/shortcodes/3dm.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/3dm.html
@@ -34,7 +34,7 @@
         100% { transform: rotate(360deg); }
     }
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha384-lI86CGWNchoT9leGBpVR41iGrRTRbHRDsPI4Zo/atPOIodjl8YyDaVefcpgkCg4u" crossorigin="anonymous"></script>
 <script src="{{ (resources.Get "/script/lodash.min.js" | resources.Fingerprint).Permalink }}"></script>
 
 <div style="display: flex; justify-content: center; flex-direction: column; position: relative;">
