--- a/themes/rhino3d.com-theme/layouts/shortcodes/scroll-video-scripts.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/scroll-video-scripts.html
@@ -1,7 +1,7 @@
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js" integrity="sha384-IEc/+MsamgT27OBODvDOuBIEae9ncji8P9p3YFhL8IcUUhyhabOWsASnyQFX/j9l" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js" integrity="sha384-ZvT4Vepz59SdkHMUWrcs/PCrR+S74FveDmkNPgV9eCw6sBW2UZv07KwdSi79pnsg" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js" integrity="sha384-k5qO2hqiOzvE5pqpY+ay9dt7au1vtSpkRH9R1Bi6HcSKwdcDyKK1cRMVPvOoNSC7" crossorigin="anonymous"></script>
 
 <script>
     var startAnim = (id, sc, control) => {
