--- a/themes/rhino3d.com-theme/layouts/shortcodes/slideshow.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/slideshow.html
@@ -16,7 +16,7 @@
 
 {{ if ne (.Get "no-jquery") "true" }}
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 {{end}}
 
 <style>
