--- a/themes/rhino3d.com-theme/layouts/shortcodes/subscribe.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/subscribe.html
@@ -48,7 +48,7 @@
 </div>
 
 {{- partial "jquery" . }}
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js" integrity="sha384-8t+aLluUVnn5SPPG/NbeZCH6TWIvaXIm/gDbutRvtEeElzxxWaZN+G/ZIEdI/f+y" crossorigin="anonymous"></script>
 <script type="text/javascript" src='{{ (resources.Get "/script/fast-toml.js" | resources.Fingerprint).Permalink }}'>
 </script>
 
